<resources>
    <string name="app_name">Rebimbóca da Parafuseta</string>
    <string name="logo">Logo</string>
    <string name="email">email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastro">Cadastro</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="produtos">Produtos</string>
    <string name="categoria">Categoria</string>
    <string name="fornecedores">Fornecedores</string>
    <string name="usuarios">Usuários</string>
    <string name="entrada">Entrada</string>
    <string name="saida">Saida</string>
    <string name="menu">Menu</string>
    <string name="confirmarsenha">Confirmar senha</string>
    <string name="confirmar_nova_senha">Confirmar nova senha</string>
    <string name="nova_senha">Nova senha</string>
    <string name="salvar_senha">Salvar senha</string>
    <string name="porca">Porca</string>
    <string name="porca_t">Porca T</string>
    <string name="uma_porca">É uma porca</string>
    <string name="r_1_268_00">R$1.268,00</string>
</resources>