<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >

        <ImageView
            android:layout_width="190dp"
            android:layout_height="250dp"
            android:contentDescription="@string/porca"
            android:src="@drawable/porcat"
            android:id="@+id/ImageMod"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/porca_t"
                android:id="@+id/NomeMod"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="5"
                    android:textSize="22sp"
                    android:id="@+id/Class"/>


                <ImageView
                    android:id="@+id/Star5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_star_border"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uma_porca"
                android:id="@+id/Descricao"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/r_1_268_00"
                android:id="@+id/Preço"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="R$500,00 de frete"
                android:id="@+id/Frete"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>